fix overflow form

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,7 @@
     font-family: "Poppins", sans-serif;
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
+    overflow: hidden;
   }
 
   input,
